# schemerlicht

./: .gitignore  CMakeLists.txt  README.md
bench/: README.md  benchall.scm  run-benchmark.scm
benchc/: CMakeLists.txt  main.c
examples/gameoflife/: CMakeLists.txt  main.cpp  window.cpp  window.h
examples/life/: CMakeLists.txt  main.cpp
old/: CMakeLists.txt
old/repl/: CMakeLists.txt  main.cpp
old/schemerlicht/: asm_aux.cpp  assignable_var_conversion.cpp  assignable_var_conversion.h  cinput_conversion.cpp  compile_error.h  compiler.cpp  compiler_options.cpp  compiler_options.h  concurrency.h  constant_folding.cpp  constant_propagation.h  context.h  cps_conversion.h  define_conversion.h  dump.cpp  dump.h  format.h  free_var_analysis.cpp  global_define_env.cpp  globals.h  inlines.cpp  lambda_to_let_conversion.cpp  linear_scan_index.h  load_lib.h  macro_expander.cpp  macro_expander.h  preprocess.h  primitives.cpp  primitives_lib.cpp  primitives_lib.h  quasiquote_conversion.h  quote_conversion.h  remove_single_begins.cpp  remove_single_begins.h  repl_data.h  runtime.h  schemerlicht.cpp  schemerlicht.h  simplify_to_core.cpp  single_begin_conversion.h  (+6 more)
old/schemerlicht.tests/: CMakeLists.txt  compile_tests.cpp  conversion_tests.cpp  format_tests.cpp  parse_tests.cpp  schemerlicht_tests.cpp  schemerlicht_tests.h  test.cpp
old/schemerlicht/scm/core/: modules.scm
old/vm/: namespace.h  peephole.h  vm.cpp  vm.h  vm_api.h  vmcode.cpp
old/vm.tests/: CMakeLists.txt  vmtests.cpp
schemerlicht/: CMakeLists.txt  alpha.c  alpha.h  alpha_conversion.h  asm_aux.h  assignablevarconv.c  assignablevarconv.h  begconv.c  begconv.h  callcc.c  callcc.h  cinput_conversion.h  closure.c  closure.h  closure_conversion.h  compile_data.h  compiler.c  compiler.cpp  compiler.h  compiler_options.cpp  compiler_options.h  constant_folding.h  constant_propagation.cpp  constfold.c  constfold.h  constprop.c  constprop.h  context.c  context.h  copy.c  copy.h  cps.c  cps.h  cps_conversion.cpp  defconv.c  defconv.h  define_conversion.cpp  dump.c  dump.cpp  dump.h  (+144 more)
schemerlicht.repl/: CMakeLists.txt  main.c
schemerlicht.tests/: CMakeLists.txt  compile_tests.cpp  compile_tests.h  compiler_tests.c  compiler_tests.h  conv_tests.c  conv_tests.h  conversion_tests.cpp  copy_tests.c  copy_tests.h  dump_tests.c  dump_tests.h  environment_tests.c  environment_tests.h  map_tests.c  map_tests.h  module_tests.c  module_tests.h  parser_tests.c  parser_tests.h  pool_tests.c  pool_tests.h  preprocess_tests.cpp  reader_tests.c  reader_tests.h  schemerlicht_tests.cpp  stream_tests.c  stream_tests.h  string_tests.c  string_tests.cpp  string_tests.h  stringvec_tests.c  stringvec_tests.h  test.c  test.cpp  test_assert.c  test_assert.h  token_tests.c  token_tests.h  tokenize_tests.cpp  (+3 more)
schemerlicht.tests/data/: load_test.scm  read_test.txt
schemerlicht/scm/: packages.scm
schemerlicht/scm/slib/: schemerlicht-slib.scm
schemerlicht/scm/test/: r4rstest.scm
schemescript/: CMakeLists.txt  alpha_conversion.cpp  alpha_conversion.h  asm_aux.cpp  asm_aux.h  assignable_var_conversion.cpp  assignable_var_conversion.h  cinput_data.h  closure_conversion.cpp  closure_conversion.h  compile_data.cpp  compile_data.h  compile_error.cpp  compile_error.h  compiler.cpp  compiler.h  compiler_options.cpp  compiler_options.h  concurrency.h  constant_folding.cpp  constant_folding.h  constant_propagation.cpp  constant_propagation.h  context.cpp  context.h  context_defs.h  cps_conversion.cpp  cps_conversion.h  define_conversion.cpp  define_conversion.h  defines.h  dump.cpp  dump.h  environment.h  file_utils.cpp  file_utils.h  filename_setter.cpp  filename_setter.h  format.cpp  format.h  (+62 more)
schemescript.tests/: CMakeLists.txt  compile_tests.cpp  conversion_tests.cpp  conversion_tests.h  format_tests.cpp  parse_tests.cpp  preprocess_tests.cpp  test.cpp  tokenize_tests.cpp  tokenize_tests.h
scm/: packages.scm
scm/misc/: csv.scm
scm/slib/: schemerlicht-slib.scm
scm/srfi/: srfi6.scm
scm/test/: r4rstest.scm
tools/primdispatch/: CMakeLists.txt  main.cpp
tools/primextract/: CMakeLists.txt  main.cpp
vm/: CMakeLists.txt  peephole.cpp  peephole.h  vm.cpp  vm.h  vmcode.cpp  vmcode.h
vm.tests/: test.cpp  vmtests.cpp
